--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ML Model Deployment</title>
+    <style>
+        body {
+            background-color: #00FF00;
+        }
+    </style>
 </head>
 <body>
     <h1>Predict with ML Model</h1>
